fix site width on mobile

--- a/guide/assets/css/style.css
+++ b/guide/assets/css/style.css
@@ -44,7 +44,7 @@ li {
 }
 
 .wrapper {
-  width: 600px;
+  max-width: 600px;
   margin: 30px auto;
   padding: 0 20px;
 }
